--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
+# Web framework
 django>=1.9.6
+
+# Helpful utilities for creating models in Django
 django-model-utils>=2.0
+
+# Library to help manage REST APIs
 djangorestframework>=3.5
