--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,9 @@ django-model-utils>=2.0
 
 # Library to help manage REST APIs
 djangorestframework>=3.5
+
+# Library to manage connecting to remote hosts via SSH
+paramiko>=2.0.2
+
+# Library to help manage python 2/3 compatibility
+six>=1.10.0
