New model Interpreter. Used in Server and Job.

--- a/.env.base
+++ b/.env.base
@@ -21,3 +21,9 @@ TEST_REMOTE_DIRECTORY=
 
 # The filename to store the scripts as
 TEST_REMOTE_FILENAME=
+
+# The interpreter name that will run the script
+TEST_INTERPRETER_NAME=
+
+# The interpreter path that will run the script
+TEST_INTERPRETER_PATH=
