Add the rest of the tests for submit_job_to_server

--- a/tox.ini
+++ b/tox.ini
@@ -7,8 +7,9 @@ envlist =
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/django_remote_submission
-commands = python runtests.py
+commands = pytest
 deps =
+    pytest
     django-18: Django>=1.8,<1.9
     django-19: Django>=1.9,<1.10
     django-110: Django>=1.10
