Attempt to fix Travis not finding pytest command

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ python:
   - "2.7"
 
 before_install:
-  - pip install codecov pytest-cov
+  - pip install codecov pytest pytest-cov
 
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install: pip install -r requirements_test.txt
