--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,13 @@ python:
   - "2.7"
 
 before_install:
-  - pip install codecov pytest pytest-cov
+  - pip install codecov
 
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install: pip install -r requirements_test.txt
 
 # command to run tests using coverage, e.g. python setup.py test
-script: python -m py.test --cov=django_remote_submission
+script: coverage run --source django_remote_submission -m py.test
 
 after_success:
-  - codecov
+  - codecov report
