--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,4 @@ install: pip install -r requirements_test.txt
 script: coverage run --source django_remote_submission -m py.test
 
 after_success:
-  - codecov report
+  - codecov
