--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,10 @@ python:
   - "2.7"
 
 before_install:
-  - pip install codecov
+  - pip install --upgrade codecov
 
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
-install: pip install -r requirements_test.txt
+install: pip install --upgrade -r requirements_test.txt
 
 # command to run tests using coverage, e.g. python setup.py test
 script: coverage run --source django_remote_submission -m py.test
