Refactor tests to use local wrapper

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@
 
 language: python
 
+env:
+  - CI=true
+
 python:
   - "3.5"
   - "3.4"
@@ -9,12 +12,13 @@ python:
 
 before_install:
   - pip install --upgrade codecov
+  - mv .env.travis .env
 
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install: pip install --upgrade -r requirements_test.txt
 
 # command to run tests using coverage, e.g. python setup.py test
-script: coverage run --source django_remote_submission -m py.test
+script: coverage run --source django_remote_submission -m py.test --ci
 
 after_success:
   - codecov
