Redo docs directory and add docstrings to models

--- a/example/Makefile
+++ b/example/Makefile
@@ -98,6 +98,7 @@ loaddata: .loaddata.secondary
 	touch $@
 
 .migrate.secondary: server/settings.py .depend.secondary
+	rm -f server/db.sqlite3
 	$(PYTHON) manage.py makemigrations
 	$(PYTHON) manage.py migrate
 	touch $@
