Potentially fix ReadTheDocs build

--- a/requirements_docs.txt
+++ b/requirements_docs.txt
@@ -3,6 +3,9 @@
 # For creating the documentation pages
 sphinx
 
+# Need the newest version
+docutils
+
 # For documenting Django applications
 django-sphinx-autodoc
 
