Add channels to requirements file
This also relates to a problem I documented in #21.

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,6 @@ paramiko>=2.0.2
 
 # Library to help manage python 2/3 compatibility
 six>=1.10.0
+
+# Add websocket connections to Django
+channels
