--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,7 @@
 [tox]
 envlist =
-    {py27,py35}-django18
-    {py27,py35}-django19
-    {py27,py35}-django110
+    py35-django110
+    py35-django200
 
 [testenv]
 setenv =
@@ -10,8 +9,6 @@ setenv =
 commands = pytest
 deps =
     pytest
-    django-18: Django>=1.8,<1.9
-    django-19: Django>=1.9,<1.10
-    django-110: Django>=1.10,<1.11
-    django-110: Django>=1.11
+    django-110: Django>=1.11,<2.0
+    django-20: Django>=2.0
     -r{toxinidir}/requirements_test.txt
